gates: run the client and join gates on every OS with a display
The verification client no longer requires Linux + xvfb. Display modes:

- xvfb (headless Linux) — unchanged, invisible virtual framebuffer
- visible-window (macOS / Windows / Linux desktop) — the real client opens
  as a small window for a few minutes, announced in the panel log; same
  client, same verdict, purely cosmetic cost
- no display at all — the honest "not verified" skip stays

Windows groundwork that the modes stand on: sandbox assembly uses junctions
and hardlinks (file symlinks need admin there), the join sandbox picks the
per-OS Forge argfile, the HMC gamedir survives .properties backslash
escaping, and the launcher JDK is discovered per-OS instead of hardcoded.
ENV_SKIP now applies only under Xvfb/Mesa — window mode runs on a real GPU
and boots the full mod set. macOS gets -XstartOnFirstThread for LWJGL.

Rejected on principle: stubbed-GL headless mode everywhere — a stub can
mask or invent render-init crashes, and a gate that can lie is worse than
a window on the desktop.